style(routes/styles): split ul/ol selectors for improved readability and formatting refactor(routes/styles): reorder font-family entries to ensure correct fallback order

--- a/src/routes/styles/foundation/_base.scss
+++ b/src/routes/styles/foundation/_base.scss
@@ -94,7 +94,8 @@ address {
 	font-style: normal;
 }
 
-ul, ol {
+ul,
+ol {
 	margin-block-start: calc(var(--spacing-l) - var(--half-leading));
 	margin-block-end: 0;
 }
